--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ src/software/utility/Pop81.VM/bin
 src/software/utility/Pop81.Assembler/obj
 src/software/utility/Pop81.VM/obj
 src/software/utility/test.asm.bin
+src/hardware/POP81/POP81.cache
+src/hardware/POP81/vivado.log
