--- a/src/software/utility/Pop81.C/Pop81.C.csproj
+++ b/src/software/utility/Pop81.C/Pop81.C.csproj
@@ -1,17 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Pop.CompilerApi\Pop.CompilerApi.csproj" />
-    <ProjectReference Include="..\Pop.ConsoleUtilities\Pop.ConsoleUtilities.csproj" />
     <ProjectReference Include="..\Pop81\Pop81.csproj" />
   </ItemGroup>
 
