First major running version - assembler and VM working

--- a/src/software/utility/Pop81.Assembler/Properties/launchSettings.json
+++ b/src/software/utility/Pop81.Assembler/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Pop81.Assembler": {
       "commandName": "Project",
-      "commandLineArgs": "..\\..\\..\\..\\test.asm"
+      "commandLineArgs": "..\\..\\..\\..\\_resources\\test.asm"
     }
   }
 }
